--- a/styles/mdhl_1.css
+++ b/styles/mdhl_1.css
@@ -8,10 +8,13 @@ body{
     background-color: #ffffff;
 }
 
+header{
+    position: relative;
+}
+
 .title{
     font-size: 3rem;
     margin-bottom: -3.5rem;
-    /* text-shadow: 0 0 3px white; */
     -webkit-text-stroke: 0.25px white;
 }
 
@@ -22,7 +25,6 @@ body{
     background-size: cover;
     background-position: 0 -18rem;
     background-repeat: no-repeat;
-    /* transform: scaleX(-1); */
 }
 
 .subtitle{
@@ -42,7 +44,9 @@ body{
 .logo{
     display: flex;
     justify-content: flex-end;
-    margin-top: -4rem;
+    position: absolute;
+    top: 80%;
+    right: 0;
 }
 
 .logo > img{
@@ -57,7 +61,7 @@ body{
     width: 100vw;
     display: flex;
     justify-content: space-between;
-    margin-top: 1rem;
+    margin-top: 4rem;
 }
 
 .sideBar{
